--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
     </properties>
 
     <dependencies>
-        <!-- java script -->
+        <!-- java script
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>2.4.5</version>
-        </dependency>
+        </dependency>-->
 
-        <!-- JWT Generate Token  -->
+        <!-- JWT Generate Token
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
@@ -41,7 +41,7 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.7.0</version>
-        </dependency>
+        </dependency>-->
 
         <!-- REST Repository HATEOAS  -->
         <dependency>
@@ -85,20 +85,17 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
-        </dependency><dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <scope>runtime</scope>
-    </dependency>
+        </dependency>
 
-        <!-- Spring boot Test Junit -->
+
+        <!-- Spring boot Test Junit
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
-        <!--  -->
+        <!--
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
@@ -110,16 +107,16 @@
             <artifactId>jsr305</artifactId>
             <version>3.0.1</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
-        <!-- monitor -->
+        <!-- monitor
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+        </dependency>-->
 
 
-        <!-- swagger2 -->
+        <!-- swagger2
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
@@ -129,7 +126,7 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
