--- a/src/main/resources/application-db.yml
+++ b/src/main/resources/application-db.yml
@@ -2,6 +2,6 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/smallestdb?characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8
     username: root
-    password: fengxiang
+    password: 123456
